[gd_scene load_steps=2 format=3 uid="uid://k8ejp0bpbay5"]

[ext_resource type="Script" uid="uid://flm7ob7jwhi1" path="res://stage/traffic/vehicle_spawn_node.gd" id="1_e3yyr"]

[node name="VehicleSpawnNode" type="Node2D"]
script = ExtResource("1_e3yyr")

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
